--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -308,13 +308,13 @@
                                             <div class="addcustomerContent">
                                                 <div class="customerField">
                                                     <input id="customerName" class="form-control" type="text" placeholder="Name" name="customerName" ng-model="customerName" required>
-                                                    <input  class="form-control" type="text" placeholder="E-mail" name="customerEmail" ng-model="customerEmail" required>
+                                                    <input  class="form-control emailField" type="text" placeholder="E-mail" name="customerEmail" ng-model="customerEmail" required>
                                                 </div>
                                                 <div class="customerField row form-group">
                                                     <div class="col-md-2 col-sm-2 col-xs-2  userNumber">
                                                         <input id="customerExt" class="form-control" type="text" placeholder="91" ng-model="customerExt" >
                                                     </div>
-                                                    <div class="col-md-10 col-sm-10 col-xs-10">
+                                                    <div class="col-md-10 col-sm-10 col-xs-10 mobilenumberField">
                                                         <input id="customerMobile" class="form-control" type="text" placeholder="Mobile" ng-model="customerMobile">
                                                     </div>
 
@@ -323,6 +323,7 @@
                                                 </div>
 
                                                 <button id="addnewCustomer" type="submit" class="btn addCustomerbtn">Add Customer</button>
+                                                <button id="cancelCustomer" ng-click="showcustomer=false;" type="button" class="btn btn-default addCustomerCancelbtn">Cancel</button>
                                                 
                                             </div>
                                         </div>
@@ -593,14 +594,6 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
-
-                                                                            <div class="form-group">
-                                                                                <label class="control-label col-sm-4" for="pwd">Day/Time</label>
-                                                                                <div class="col-sm-8 dateTimeDiv">
-                                                                                    <span class="glyphicon glyphicon-ok calendarOk"></span><!--<input type="text" class="form-control datepickerBox" ng-model="datatime" placeholder="Fri, May 12" id="datetimepicker4" />-->
-                                                                                    <input ng-model="selecteddate" class="form-control datepickerBox"  datetime-picker date-format="EEE, MMM d" size="30" date-only />
-                                                                                </div>
-                                                                            </div>
                                                                             <div class="form-group">
                                                                                 <label class="control-label col-sm-4"></label>
                                                                                 <div class="col-sm-8">
@@ -618,14 +611,41 @@
                                                                                                 </span>
                                                                                             </a>
                                                                                             <!--<ul id="custmDropdown" class="apptcustomeDropdown" ng-show="minhours" style="display:block;position:absolute;">
-                                        <li><a ng-click="Converttomin()">Mins</a></li>
-                                        <li><a ng-click="Convertohour()">Hours</a></li>
-                                    </ul>-->
+                        <li><a ng-click="Converttomin()">Mins</a></li>
+                        <li><a ng-click="Convertohour()">Hours</a></li>
+                    </ul>-->
                                                                                         </div>
                                                                                     </div>
 
                                                                                 </div>
                                                                             </div>
+                                                                            <div class="form-group">
+                                                                                <label class="control-label col-sm-4" for="pwd">Day/Time</label>
+                                                                                <div class="col-sm-8 dateTimeDiv">
+                                                                                    <span class="glyphicon glyphicon-ok calendarOk"></span><!--<input type="text" class="form-control datepickerBox" ng-model="datatime" placeholder="Fri, May 12" id="datetimepicker4" />-->
+                                                                                    <input datetime-picker ng-model="selecteddate" date-disabled-weekdays="disabled()" disable-weekends="true"  class="form-control datepickerBox"  date-format="EEE, MMM d" size="30" date-only   />
+                                                                                    <!--<datetimepicker ng-model="date"
+                                                                                                    date-format="EEE, MMM d"
+                                                                                                    date-options="dateOptions"
+                                                                                                    date-disabled="isDisabledDate(date, mode)">
+                                                                                    </datetimepicker>-->
+                                                                                    <!--<input type='text'
+                                                                                           class="form-control"
+                                                                                           datepicker-popup
+                                                                                           ng-model="startDate"
+                                                                                           is-open="opened"
+                                                                                           ng-click="opened = !opened"
+                                                                                           ng-readonly='true' />-->
+                                                                                    <div class="selectDropdown">
+                                                                                        <select class="select_btn" ng-required="true" ng-model="option" ng-init="option=timeInfoFrom[0]">
+                                                                                            <option ng-repeat="option in timeInfoFrom" value="{{option}}">{{option}}</option>
+                                                                                        </select>
+                                                                                    </div>
+                                                                                </div>
+
+                                                                                
+                                                                            </div>
+                                                                           
                                                                             <div class="form-group">
                                                                                 <label class="control-label col-sm-4" for="pwd">Notes</label>
                                                                                 <div class="col-sm-8 notesForCustomer">
